--- a/typescript/package.json
+++ b/typescript/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "protoc-gen-ts": "^0.6.0"
-  }
+    "google-protobuf": "3.18.1",
+    "protoc-gen-ts": "0.6.0",
+    "typescript": "4.4.3"
+  },
+  "dependencies": {}
 }
