lots more setup

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,13 +27,7 @@ jobs:
           node-version: 14
 
       - name: Install protoc
-        run: |
-          set -e
-          set -x
-          sudo apt-get -y install zip
-            curl -L https://github.com/protocolbuffers/protobuf/releases/download/v3.18.1/protoc-3.18.1-linux-x86_64.zip -o protoc.zip
-          unzip -o protoc.zip -d protoc
-          sudo mv protoc/include/* /usr/local/include/
+        run: ./install_protoc.sh
 
       - name: Build package
         run: |
@@ -42,9 +36,7 @@ jobs:
           export PATH=`pwd`/protoc/bin/:$PATH
           pushd typescript
             npm install
-            PATH=node_modules/protoc-gen-ts/bin/:$PATH protoc -I=../proto --ts_out=dist cacheclient.proto controlclient.proto
-            # The build is really just generating proto files above. Could put it in npm but
-            # npm run build
+            npm run build
           popd
         shell: bash
 
