--- a/typescript/package.json
+++ b/typescript/package.json
@@ -2,17 +2,24 @@
   "name": "@momento/wire-types-typescript",
   "description": "Types for Momento services",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && mkdir dist && ./generate_protos.sh && tsc"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.2",
+    "@types/google-protobuf": "^3.15.5",
+    "@types/node": "^16.10.3",
     "google-protobuf": "3.18.1",
     "protoc-gen-ts": "0.6.0",
     "typescript": "4.4.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@grpc/grpc-js": "1.3.7"
+  },
   "files": [
     "dist"
   ]
