--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "@types/google-protobuf": "^3.15.5",
-    "@types/node": "^16.10.3",
+    "@tsconfig/node16": "1.0.2",
+    "@types/google-protobuf": "3.15.5",
+    "@types/node": "16.10.3",
     "google-protobuf": "3.18.1",
     "protoc-gen-ts": "0.6.0",
     "typescript": "4.4.3"
