fix: add 'declaration: true' to tsconfig

--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -5,8 +5,9 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
-      },
+        "forceConsistentCasingInFileNames": true,
+        "declaration": true
+    },
       "$schema": "https://json.schemastore.org/tsconfig",
       "display": "Recommended"
 }
