fix: publish typescript types

--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -9,5 +9,8 @@
         "declaration": true
     },
     "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Recommended"
+    "display": "Recommended",
+    "exclude": [
+        "dist"
+    ]
 }
