--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,7 +29,7 @@ jobs:
           set -x
           export PATH=`pwd`/protoc/bin/:$PATH
           pushd typescript
-            npm install
+            npm ci
             npm run build
           popd
         shell: bash
