--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,9 +8,29 @@ on:
   workflow_dispatch:
 
 jobs:
+  release:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.release.outputs.release }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set release
+        id: semrel
+        uses: go-semantic-release/action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          allow-initial-development-versions: true
+          force-bump-patch-version: true
+      
+      - id: release
+        run: echo "::set-output name=release::${{ steps.semrel.outputs.version }}"
+
+
   publish_typescript:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: release
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -40,17 +60,9 @@ jobs:
           popd
         shell: bash
 
-      - name: Set release
-        id: semrel
-        uses: go-semantic-release/action@v1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          allow-initial-development-versions: true
-          force-bump-patch-version: true
-
       - name: Publish npm package to Artifactory
         run: |
-          export VERSION="${{ steps.semrel.outputs.version }}"
+          export VERSION="${{needs.release.outputs.version}}"
           echo "Publishing package with version $VERSION"
           pushd typescript
             mv package.json package.json.ORIG
@@ -58,3 +70,48 @@ jobs:
             npm publish
           popd
         shell: bash
+
+  publish_kotlin:
+    runs-on: ubuntu-latest
+    needs: release
+
+    steps:
+      strategy:
+      matrix:
+        platform: [ ubuntu-latest ]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - name: Assume Role
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          # TODO User: arn:aws:iam::***:user/shared-control-plane-deploy-user is not authorized to perform: sts:TagSession on resource: arn:aws:iam::***:role/control-plane-remote-deployer
+          role-skip-session-tagging: true
+          aws-access-key-id: ${{ secrets.PROD_CICD_DEPLOY_USER_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.PROD_CICD_DEPLOY_USER_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
+          role-to-assume: arn:aws:iam::401011790710:role/control-plane-remote-deployer
+          role-session-name: cicd-deployer
+          role-duration-seconds: 900
+
+      - name: Get CodeArtifact token
+        run: |
+          TOKEN=$(aws codeartifact get-authorization-token \
+                                            --domain momento-prod --domain-owner 401011790710 \
+                                            --query authorizationToken --output text)
+          echo "::add-mask::$TOKEN"
+          echo "CODEARTIFACT_AUTH_TOKEN=$TOKEN" >> $GITHUB_ENV
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Publish to CodeArtifact
+        run: |
+          VERSION="${{needs.release.outputs.version}}"
+          echo "version: ${VERSION}"
+          pushd kotlin
+            ./gradlew publish -Pversion=$VERSION
+          popd
