--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,8 +22,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           allow-initial-development-versions: true
           force-bump-patch-version: true
-      
-      - id: release
+
+      - name: Output release
+        id: release
         run: echo "::set-output name=release::${{ steps.semrel.outputs.version }}"
 
 
@@ -75,11 +76,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: release
 
-    steps:
-      strategy:
-      matrix:
-        platform: [ ubuntu-latest ]
-    runs-on: ${{ matrix.platform }}
     steps:
       - name: Assume Role
         uses: aws-actions/configure-aws-credentials@v1
