--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -111,3 +111,52 @@ jobs:
           pushd kotlin
             ./gradlew publish -Pversion=$VERSION
           popd
+
+  publish_python:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: release
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+
+      - name: Configure Artifactory publish credentials
+        run: |
+          set -e
+          set -x
+          pushd python
+            ./jfrog_setup.sh deploy-user ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }} >> ~/.pypirc
+          popd
+        shell: bash
+
+      - name: Install protoc
+        run: ./install_protoc.sh
+
+      - name: Build and publish package
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$PATH
+
+          pushd python
+            ./generate_protos.sh
+            pushd momento
+              export PYPI_MOMENTO_WIRE_TYPE_VERSION="${{needs.release.outputs.version}}"
+              echo "PYPI_MOMENTO_WIRE_TYPE_VERSION=${PYPI_MOMENTO_WIRE_TYPE_VERSION}"
+              python -m build
+              twine upload -r local dist/ --config-file ~/.pypirc
+            popd
+          popd
+        shell: bash
+
