--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -94,11 +94,12 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install setuptools wheel
 
       - name: Install protoc
         run: ./install_protoc.sh
 
-      - name: Build and publish package
+      - name: Build package
         run: |
           set -e
           set -x
