--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -129,7 +129,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install setuptools wheel twine build
 
       - name: Configure Artifactory publish credentials
         run: |
