refactor directory structure

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = momento_wire_types
+name = momento-wire-types
 
 [options]
 package_dir =
-    = wire_types
+    = src
 packages = find:
 python_requires = >=3.6
 
 [options.packages.find]
-where = wire_types
+where = src
