--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -6,6 +6,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    protobuf
 
 [options.packages.find]
 where = src
