--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,7 +33,7 @@ jobs:
             npm run build
           popd
         shell: bash
-  
+
   build_kotlin:
     runs-on: ubuntu-latest
     steps:
@@ -75,3 +75,39 @@ jobs:
           pushd kotlin
             ./gradlew build
           popd
+
+  build_python:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Get current time
+        uses: gerred/actions/current-time@master
+        id: current-time
+
+      - uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel build
+
+      - name: Install protoc
+        run: ./install_protoc.sh
+
+      - name: Build package
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$PATH
+          export PYPI_MOMENTO_WIRE_TYPE_VERSION=0.0.devBuild
+          pushd python
+            ./generate_protos.sh
+            python -m build
+            ls -l src/momento_wire_types
+          popd
+        shell: bash
