--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -200,6 +200,7 @@ jobs:
         run: |
           pushd csharp
             VERSION="${{needs.release.outputs.version}}"
+            dotnet build --configuration Release
             nuget pack -Version ${VERSION}
             nuget push Momento.${VERSION}.nupkg -Source Artifactory
           popd
