--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -192,11 +192,13 @@ jobs:
 
       - name: Pack and Publish
         run: |
+          set -x
           pushd csharp
             VERSION="0.0.2"
             dotnet build --configuration Release
             ls -lah bin/Release
             ls -lah obj
+            ls -lah
             nuget pack -Version ${VERSION} -Properties Configuration=Release
             nuget push Momento.${VERSION}.nupkg -Source Artifactory -Verbosity detailed
           popd
