feat: Use Grpc-io to generate grpc stubs

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -94,21 +94,16 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel build
-
-      - name: Install protoc
-        run: ./install_protoc.sh
+          pip install setuptools wheel build grpcio-tools
 
       - name: Build package
         run: |
           set -e
           set -x
-          export PATH=`pwd`/protoc/bin/:$PATH
           export PYPI_MOMENTO_WIRE_TYPE_VERSION=0.0.devBuild
           pushd python
-            ./generate_protos.sh
+            python -m grpc_tools.protoc -I../protos --python_out=src/momento_types --grpc_python_out=src/momento_types cacheclient.proto controlclient.proto
             python -m build
-            ls -l src/momento_wire_types
           popd
         shell: bash
 
