--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -161,6 +161,6 @@ jobs:
           export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
           pushd rust
             ./generate_protos.sh
-            ls
+            cargo build
           popd
         shell: bash
