feat: add rust protos (#17)

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -137,3 +137,30 @@ jobs:
             dotnet build
           popd
         shell: bash
+
+  build_rust:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Get current time
+        uses: gerred/actions/current-time@master
+        id: current-time
+
+      - uses: actions/checkout@v2
+
+      - name: Install protoc
+        run: ./install_protoc.sh
+
+      - name: Install protobuf-codegen
+        run: cargo install protobuf-codegen
+
+      - name: Build package
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
+          pushd rust
+            ./generate_protos.sh
+            cargo build
+          popd
+        shell: bash
