build: fix cargo config in cd.yaml

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -215,7 +215,7 @@ jobs:
       - name: Setup Cargo Registry
         run: |
           echo "[registries.momento]" >> ~/.cargo/config.toml
-          echo "index = "https://momento.jfrog.io/artifactory/git/cargo-public.git"" >> ~/.cargo/config.toml
+          echo 'index = "https://momento.jfrog.io/artifactory/git/cargo-public.git"' >> ~/.cargo/config.toml
         shell: bash
 
       - name: Install protoc
