build: allow dirty cargo publish
we need to allow dirty because we are modifying the cargo.toml within the build, and it does not get committed to git https://doc.rust-lang.org/cargo/commands/cargo-publish.html

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -240,6 +240,6 @@ jobs:
           pushd rust
             ./generate_protos.sh
             cargo build --release
-            cargo publish --registry momento --token ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }}
+            cargo publish --registry momento --token ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }} --allow-dirty
           popd
         shell: bash
