build: commit rush changes before publishing

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -239,7 +239,9 @@ jobs:
           export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
           pushd rust
             ./generate_protos.sh
+            git add .
+            git commit -m "feat: publishing latest release ${{ needs.release.outputs.version }}"
             cargo build --release
-            cargo publish --registry momento --token ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }} --allow-dirty
+            cargo publish --registry momento --token ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }}
           popd
         shell: bash
