--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -129,7 +129,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine build
+          pip install setuptools wheel twine build grpcio-tools
 
       - name: Configure Artifactory publish credentials
         run: |
@@ -140,17 +140,11 @@ jobs:
           popd
         shell: bash
 
-      - name: Install protoc
-        run: ./install_protoc.sh
-
       - name: Build and publish package
         run: |
           set -e
           set -x
-          export PATH=`pwd`/protoc/bin/:$PATH
-
           pushd python
-            ./generate_protos.sh
             export PYPI_MOMENTO_WIRE_TYPE_VERSION="${{needs.release.outputs.version}}"
             if [ -z "$PYPI_MOMENTO_WIRE_TYPE_VERSION"]
             then
@@ -158,7 +152,7 @@ jobs:
               export PYPI_MOMENTO_WIRE_TYPE_VERSION="0.0.dev"`date +%s`
             fi
             echo "PYPI_MOMENTO_WIRE_TYPE_VERSION=${PYPI_MOMENTO_WIRE_TYPE_VERSION}"
-            python -m build
+            ./buildpypi.sh
             twine upload -r local dist/* --config-file ~/.pypirc
           popd
         shell: bash
