--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -212,7 +212,7 @@ jobs:
           echo 'index = "https://momento.jfrog.io/artifactory/git/cargo-public.git"' >> ~/.cargo/config.toml
 
           echo "[registries.momento]" >> ~/.cargo/credentials.toml
-          echo 'token = "Bearer ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }}"' >> ~/.cargo/credentials.toml
+          echo 'token = "Bearer AP2mKHvH3wq1XfKJWJwfMn7vQcgKL7UVQfp2v5"' >> ~/.cargo/credentials.toml
         shell: bash
 
       - name: Install protoc
