--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -225,7 +225,7 @@ jobs:
         run: |
           pushd rust
             chmod +x set_cargo_package_version.sh
-            ./set_cargo_package_version.sh ${{ needs.release.outputs.version }}
+            ./set_cargo_package_version.sh ${{needs.release.outputs.version}}
           popd
         shell: bash
 
@@ -235,8 +235,11 @@ jobs:
           set -x
           export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
           pushd rust
+            VERSION="${{needs.release.outputs.version}}"
             ./generate_protos.sh
             cargo build --release
-            cargo publish --registry momento --allow-dirty --no-verify
+            # FIXME
+            # cargo publish --registry momento --allow-dirty --no-verify --dry-run
+            curl -u deploy-user:${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }} -XPUT "https://momento.jfrog.io/artifactory/cargo-public/crates/momento-protos-${VERSION}.crate" -T ./target/package/momento-protos-${VERSION}.crate
           popd
         shell: bash
