--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,10 +2,10 @@ name: On pull request
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  build_typescript:
+  build_javascript:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +28,7 @@ jobs:
           set -e
           set -x
           export PATH=`pwd`/protoc/bin/:$PATH
-          pushd typescript
+          pushd javascript
             npm ci
             npm run build
           popd
@@ -89,7 +89,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install python dependencies
         run: |
@@ -106,7 +106,6 @@ jobs:
           popd
         shell: bash
 
-
   build_csharp:
     runs-on: ubuntu-latest
 
@@ -119,11 +118,11 @@ jobs:
 
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.x'
+          dotnet-version: "5.0.x"
 
       - uses: nuget/setup-nuget@v1
         with:
-          nuget-version: '5.x'
+          nuget-version: "5.x"
 
       - name: Build
         run: |
