--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,7 +2,7 @@ name: On Push
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,8 +27,7 @@ jobs:
         id: release
         run: echo "::set-output name=release::${{ steps.semrel.outputs.version }}"
 
-
-  publish_typescript:
+  publish_javascript:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     needs: release
@@ -55,7 +54,7 @@ jobs:
           set -e
           set -x
           export PATH=`pwd`/protoc/bin/:$PATH
-          pushd typescript
+          pushd javascript
             npm ci
             npm run build
           popd
@@ -65,7 +64,7 @@ jobs:
         run: |
           export VERSION="${{needs.release.outputs.version}}"
           echo "Publishing package with version $VERSION"
-          pushd typescript
+          pushd javascript
             mv package.json package.json.ORIG
             cat package.json.ORIG|jq ". += {\"version\": \"$VERSION\"}" > package.json
             npm publish
@@ -124,7 +123,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install python dependencies
         run: |
@@ -168,11 +167,11 @@ jobs:
 
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.x'
+          dotnet-version: "5.0.x"
 
       - uses: nuget/setup-nuget@v1
         with:
-          nuget-version: '5.x'
+          nuget-version: "5.x"
 
       - name: Configure Artifactory publish credentials
         run: |
