feat: add Apache 2.0 License; update setups for PyPI; update push Github action

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,5 +1,8 @@
 [metadata]
 name = momento-wire-types
+description = momento-wire-types
+author = Momento
+license = Apache License 2.0
 
 [options]
 package_dir =
