--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = momento-wire-types
 description = momento-wire-types
+long_description = Proto Generated Files for Python
 author = Momento
 license = Apache License 2.0
 
