chore: update PYPIREADME.md and PyPI description

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = momento-wire-types
-description = Momento Client Proto Generated Files for Python
+description = Momento Client Proto Generated Files
 author = Momento
 license = Apache License 2.0
 
