--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,5 +1,8 @@
 [metadata]
 name = momento-wire-types
+description = Momento Client Proto Generated Files
+author = Momento
+license = Apache License 2.0
 
 [options]
 package_dir =
