feat: add HttpCache service definition
* Add HttpCache service and add http path spec
* Add generated descriptors file. We should put this somewhere else but I don't have a better place handy atm.
* Move kotlin subfolder to kotlin-messages, restructure a little for easier development

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Build
         run: |
-          pushd kotlin
+          pushd kotlin-messages
             ./gradlew build
           popd
 
