separate the httpcache client generation code. No real need to have the types in most sdks (not reeeeally a great reason to have it in java either but)

--- a/csharp/Momento.csproj
+++ b/csharp/Momento.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
 <ItemGroup>
-  <Protobuf Include="../proto/**/*.proto" />
+  <Protobuf Include="../proto/cacheclient.proto" />
+  <Protobuf Include="../proto/controlclient.proto" />
 </ItemGroup>
 
 
