--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "@momento/wire-types-javascript",
+  "name": "@momentohq/generated-types",
   "description": "Types for Momento services",
+  "version": "0.0.1",
   "main": "index.js",
   "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/momentohq/client_protos"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && mkdir dist && ./generate_protos.sh && tsc"
